Got the propNumberPair test passing